--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "circletype": "^2.3.0",
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
+    "react-audio-player": "^0.11.1",
     "react-dom": "~15.4.2",
     "react-router": "~3.2.0",
     "react-youtube": "^7.9.0",
